--- a/Application.json
+++ b/Application.json
@@ -4,7 +4,7 @@
         "jobID":"RANDOM"
     },
     {
-        "stidentID":"RANDOM",
+        "studentID":"RANDOM",
         "jobID":"RANDOM"
     }
 
